<resources>
    <string name="app_name">My Application</string>
    <string name="submitBtn">Submit</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="father_apos_s_name">Father\'s Name</string>
    <string name="mother_apos_s_name">Mother\'s Name</string>
    <string name="mobile">Mobile</string>
    <string name="email_address">Email Address</string>
    <string name="address">Address</string>
    <string name="title_activity_confirm_details">ConfirmDetailsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="upload">Upload</string>
</resources>
